current version of secret change handler
